# Colorista

./: .gitignore  .gitmodules  CMakeLists.txt  Colorista.code-workspace  README.md
app/: CMakeLists.txt  Main.cpp  imgui.ini  imguipch.h
app/shaders/: f.shader  fractals.shader  fragment.shader  mandelbrot.shader  v.shader  vertex.shader
app/src/: AppLayer.cpp  AppLayer.h  DemoLayer.cpp  DemoLayer.h  EditorState.h  ImGuiLayer.cpp  ImGuiLayer.h  Main.cpp
core/: CMakeLists.txt  Core.h  Corepch.h
core/src/: Application.cpp  Application.h  Base.h  Event.h  Layer.h  Log.cpp  Log.h  Window.cpp  Window.h
core/src/events/: Event.h  KeyEvents.h
core/src/platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h
core/src/renderer/: Buffer.cpp  Buffer.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
