file(GLOB_RECURSE SRCS "*.cpp")
file(GLOB_RECURSE HDRS "*.h")

add_executable(${PROJECT_NAME} ${SRCS} ${HDRS})

target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/app")

set(APP_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/app")

if(WIN32)
set_target_properties(${PROJECT_NAME} PROPERTIES
  WORKING_DIRECTORY                     "${APP_WORKING_DIRECTORY}"
  DEBUGGER_WORKING_DIRECTORY            "${APP_WORKING_DIRECTORY}"
  VS_DEBUGGER_WORKING_DIRECTORY         "${APP_WORKING_DIRECTORY}"
  XCODE_SCHEME_WORKING_DIRECTORY        "${APP_WORKING_DIRECTORY}"
  CMAKE_VS_DEBUGGER_WORKING_DIRECTORY   "${APP_WORKING_DIRECTORY}"
  CMAKE_XCODE_SCHEME_WORKING_DIRECTORY  "${APP_WORKING_DIRECTORY}"
)
elseif(LINUX)
add_custom_target(run
  COMMAND ${CMAKE_COMMAND} -E chdir "${APP_WORKING_DIRECTORY}" $<TARGET_FILE:${PROJECT_NAME}>
  DEPENDS ${PROJECT_NAME}
  USES_TERMINAL
  VERBATIM
)
endif()

target_precompile_headers(${PROJECT_NAME} PRIVATE "imguipch.h")

target_link_libraries(${PROJECT_NAME} PRIVATE Core)
